abcde (2.3.99.7-1) unstable; urgency=low

  * The "It took me a long time to get this release out" release.
  * abcde.1: remove -M in favour of "-a cue" (Closes: #382614, #396505).
  * Added a check for a DOCUE already set in the command line
    (Closes: #385663).
  * Added -q <Q> as a quality option.
  * PREGAP was not set in some situations (Closes: #390170).
  * Corrected debian/changelog.
  * Added -nv to wget for "no verbose" output, to avoid wget complaining it
    cannot be quiet and verbose at the same time if "verbose = on" is set in
    ~/.wgetrc (Closes: #388715).
  * Added XS-Vcs-Svn: field to control file.
  * Added some hints if we are using Debian for what packages need to be
    installed if their binaries are not found.
  * Spelling mistakes corrected (thanks to Ville Skytta).
  * Unset GREP_OPTIONS to avoid things like printing number in the begining of
    the line (Closes: #383771).
  * Default answer to erase a playlist was not working (thanks to Charles
    Steinkuehler) (Closes: #395108).
  * Corrected man page wrapping. Thanks to Edward J. Shornock
    (Closes: #399289).
  * Adds DISCNUMBER to Ogg/Vorbis and FLAC when using -W.
  * Minor typos (Closes: #458995).
  * Added AtomicParley for AAC encoding. Thanks to Bill Adams.
  * Added by Marc Staveley:
    - post_encode hook.
    - track comments if null and present in CDDB.
  * Corrected copyright information (Closes: #516535).

 -- Jesus Climent <jesus.climent@hispalinux.es>  Sun, 22 Feb 2009 13:30:02 +0000

abcde (2.3.99.6-1) unstable; urgency=low

  * Default to UNICODE (UTF8) tags and comments (Closes: #282332).
    - Added CDDBPROTO option in config file (Closes: #349951)
  * Added a missing "INDEX 01" entry for CUE sheet creation.
  * Avoid completing the encoding of files if we aborted previously.
  * Embed the CUE sheet if we have a cuesheet file and we have a single FLAC
    file, even if we are not tagging. This way we can use the file as a source